2020-03-01  Karl Berry  <karl@freefriends.org>

	* Import xdvi-22.87.04 from
	https://sourceforge.net/projects/xdvi/files/xdvik, includes
	changes made here.

2019-07-22  Karl Berry  <karl@freefriends.org>

	* psgs.c (initGS): don't use now-gone-from-ghostscript execute
	operator; from Paul Vojta.

2019-05-31  Karl Berry  <karl@freefriends.org>

	* ac/xdvik.ac (xdvi-x-toolkit): the default is always xaw,
	and has been for a long time. Nelson mail to tlbuild,
	31 May 2019 11:39:52.

2019-03-25  Karl Berry  <karl@freefriends.org>

	* xdvi.1.in: omit unused second font letter for option names.
	From Debian.

2018-01-17  Karl Berry  <karl@freefriends.org>

	* xdvi.1.in: remove trailing whitespace to placate Debian.
	Use \& instead of "," after end-of-line "e.g." for consistency.
	Remove spurious doubled words.

2018-01-17  Norbert Preining  <norbert@preining.info>

	* add .desktop file
	* Makefile.am: add desktop file installation

2017-08-07  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* Makefile.am: config.xdvi is installed under
	texmf-dist/dvips/xdvi, not texmf-dist/dvips/config.

2016-04-06  Karl Berry  <karl@tug.org>

	* Import xdvik-22.87.03.

2015-04-17  Karl Berry  <karl@tug.org>

	* psheader.txt (/psfts, /startTexFig, /doclip, /endTexFig):
	remove these defns from (obsolete and nonfree) psfig.
	Report from Werner Fink, 14 Apr 2015 17:16:23.

2014-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* xdvi.c (set_windowsize): Use "%u" to print unsigned int.
	* hypertex.h: Correct typo in spelling of header guard.

2014-06-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* encodings.c: Do not compile close_iconv() when not used.
	* translations.h: Do not #include "c-auto.h".
	* xdvi.h: Do not #include "c-auto.h" and "kpathsea/c-auto.h".

	* m4/xdvi-xinput-2-1.m4: Test link instead of compile step.

2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* ft.c, gui/xaw_menu.c, hypertex.c: Avoid undefined behaviour
	when char is signed.
