@@ -455,7 +455,10 @@ is_good_dvi_file(const char *filename, Boolean from_history)
 
     if ((ret = REALPATH(real_filename, canonical_path)) == NULL) {
 	/* REALPATH failed, use real_filename */
-	size_t n = strnlen(real_filename, MAXPATHLEN);
+	size_t n = strlen(real_filename);
+	if (n >= MAXPATHLEN) {
+	  n = MAXPATHLEN - 1;
+	}
 
 	memcpy(canonical_path, real_filename, n);
 	canonical_path[n] = '\0';
